src/index.css
@import url('https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100;0,9..40,200;0,9..40,300;0,9..40,400;0,9..40,500;1,9..40,100;1,9..40,200;1,9..40,300;1,9..40,400;1,9..40,500&family=Roboto+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap');

#root {
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  width: 100%;
}

:root {
  font-family: 'DM Sans', sans-serif, 'Roboto Mono', monospace;
  line-height: 1.5;
  font-weight: 200;

  color-scheme: light dark;
  color: #000;
  background-color: #f5f5f5;

  font-synthesis: none;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  -webkit-text-size-adjust: 100%;
}

a {
  font-weight: 200;
  color: #131313;
  text-decoration: inherit;
}
a:hover {
  color: #9c9c9c;
}

body {
  margin: 0;
  display: flex;
}

h1 {
  font-family: 'Roboto Mono';
  font-size: 18px;
  font-style: normal;
  font-weight: 300;
  line-height: normal;
  letter-spacing: 0.9px;
  margin: 0;
}

h2,
h3 {
  font-family: 'Roboto Mono';
  font-size: 18px;
  font-style: normal;
  font-weight: 300;
  line-height: normal;
  letter-spacing: 0.9px;
  text-transform: lowercase;
  margin: 0;
}

h4 {
  font-family: 'Roboto Mono';
  font-size: 14px;
  font-style: normal;
  font-weight: 300;
  line-height: normal;
  letter-spacing: -0.28px;
  margin: 0;
}

p {
  font-family: 'DM Sans';
  font-size: 12px;
  font-style: normal;
  font-weight: 300;
  line-height: 160.5%; /* 19.26px */
  letter-spacing: 0.6px;
  text-transform: lowercase;
  margin: 0;
}

span {
  font-family: 'Roboto Mono';
  font-size: 9px;
  font-style: normal;
  font-weight: 100;
  line-height: normal;
  letter-spacing: 0.45px;
  margin: 0;
}

button {
  border: 0.5px solid #000;
  background: #fefefe;
  border-radius: 4px;
  width: 159px;
  height: 34px;
  padding: 6px 20px;
  font-size: 12px;
  font-style: normal;
  font-weight: 400;
  line-height: normal;
  letter-spacing: 2.4px;
  text-transform: lowercase;
  cursor: pointer;
  transition: all 300ms;
}

button:hover {
  border-color: #d0d0d0;
  background: #fff;
}
button:focus,
button:focus-visible {
  outline: 1px black;
}

.underline a:hover {
  color: #9c9c9c;
}

.tooltip {
  position: absolute;
  display: flex;
  opacity: 0;
  background-color: rgb(242, 242, 242);
  color: black;
  text-align: center;
  justify-content: center;
  border-radius: 6px;
  top: 100%;
  z-index: 20;
  transition: opacity 250ms ease-in-out;
  gap: 5px;
}

.join-us-button:hover .tooltip {
  opacity: 100%;
}

.underline:hover .tooltip {
  opacity: 100%;
}

@media only screen and (max-width: 850px) {
  .landing-right {
    display: none;
  }
  .projects-grid {
    grid-template-columns: repeat(2, 1fr);
  }
}

@media only screen and (max-width: 570px) {
  .projects-grid {
    grid-template-columns: repeat(1, 1fr);
  }
  .right-container .multi-language-container {
    display: none;
  }
}

